Compilador/Analisadores/parser.output
Terminais sem uso na gramática

    ERRO


Gramática

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao_lista declaracao
    3                 | declaracao

    4 declaracao: var_declaracao
    5           | func_declaracao

    6 var_declaracao: INT id PVIR
    7               | VOID id PVIR
    8               | INT id ACOL num FCOL PVIR
    9               | VOID id ACOL num FCOL PVIR

   10 func_declaracao: INT id AP params FP composto_decl
   11                | VOID id AP params FP composto_decl

   12 params: param_lista
   13       | VOID

   14 param_lista: param_lista VIR param
   15            | param

   16 param: INT id
   17      | VOID id
   18      | INT id ACOL FCOL
   19      | VOID id ACOL FCOL

   20 composto_decl: ACHA local_declaracoes statement_lista FCHA

   21 local_declaracoes: local_declaracoes var_declaracao
   22                  | %empty

   23 statement_lista: statement_lista statement
   24                | %empty

   25 statement: expressao_decl
   26          | composto_decl
   27          | selecao_decl
   28          | iteracao_decl
   29          | retorno_decl

   30 expressao_decl: expressao PVIR
   31               | PVIR

   32 selecao_decl: IF AP expressao FP statement
   33             | IF AP expressao FP statement ELSE statement

   34 iteracao_decl: WHILE AP expressao FP statement

   35 retorno_decl: RETURN PVIR
   36             | RETURN expressao PVIR

   37 expressao: var ATRIB expressao
   38          | simples_expressao

   39 var: id
   40    | id ACOL expressao FCOL

   41 simples_expressao: soma_expressao relacional soma_expressao
   42                  | soma_expressao

   43 relacional: MENE
   44           | MEN
   45           | MAI
   46           | MAIE
   47           | IGUAL
   48           | DIF

   49 soma_expressao: soma_expressao soma termo
   50               | termo

   51 soma: SOM
   52     | SUB

   53 termo: termo mult fator
   54      | fator

   55 mult: MUL
   56     | DIV

   57 fator: AP expressao FP
   58      | var
   59      | ativacao
   60      | num

   61 ativacao: id AP args FP

   62 args: arg_lista
   63     | %empty

   64 arg_lista: arg_lista VIR expressao
   65          | expressao

   66 id: ID

   67 num: NUM


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    ERRO (258)
    ID (259) 66
    NUM (260) 67
    IF (261) 32 33
    INT (262) 6 8 10 16 18
    RETURN (263) 35 36
    VOID (264) 7 9 11 13 17 19
    WHILE (265) 34
    IGUAL (266) 47
    DIF (267) 48
    MEN (268) 44
    MENE (269) 43
    MAI (270) 45
    MAIE (271) 46
    SOM (272) 51
    SUB (273) 52
    MUL (274) 55
    DIV (275) 56
    ATRIB (276) 37
    PVIR (277) 6 7 8 9 30 31 35 36
    VIR (278) 14 64
    AP (279) 10 11 32 33 34 57 61
    ACOL (280) 8 9 18 19 40
    FCOL (281) 8 9 18 19 40
    ACHA (282) 20
    FCHA (283) 20
    FP (284) 10 11 32 33 34 57 61
    ELSE (285) 33


Não terminais com as regras onde eles aparecem

    $accept (31)
        à esquerda: 0
    programa (32)
        à esquerda: 1
        à direita: 0
    declaracao_lista (33)
        à esquerda: 2 3
        à direita: 1 2
    declaracao (34)
        à esquerda: 4 5
        à direita: 2 3
    var_declaracao (35)
        à esquerda: 6 7 8 9
        à direita: 4 21
    func_declaracao (36)
        à esquerda: 10 11
        à direita: 5
    params (37)
        à esquerda: 12 13
        à direita: 10 11
    param_lista (38)
        à esquerda: 14 15
        à direita: 12 14
    param (39)
        à esquerda: 16 17 18 19
        à direita: 14 15
    composto_decl (40)
        à esquerda: 20
        à direita: 10 11 26
    local_declaracoes (41)
        à esquerda: 21 22
        à direita: 20 21
    statement_lista (42)
        à esquerda: 23 24
        à direita: 20 23
    statement (43)
        à esquerda: 25 26 27 28 29
        à direita: 23 32 33 34
    expressao_decl (44)
        à esquerda: 30 31
        à direita: 25
    selecao_decl (45)
        à esquerda: 32 33
        à direita: 27
    iteracao_decl (46)
        à esquerda: 34
        à direita: 28
    retorno_decl (47)
        à esquerda: 35 36
        à direita: 29
    expressao (48)
        à esquerda: 37 38
        à direita: 30 32 33 34 36 37 40 57 64 65
    var (49)
        à esquerda: 39 40
        à direita: 37 58
    simples_expressao (50)
        à esquerda: 41 42
        à direita: 38
    relacional (51)
        à esquerda: 43 44 45 46 47 48
        à direita: 41
    soma_expressao (52)
        à esquerda: 49 50
        à direita: 41 42 49
    soma (53)
        à esquerda: 51 52
        à direita: 49
    termo (54)
        à esquerda: 53 54
        à direita: 49 50 53
    mult (55)
        à esquerda: 55 56
        à direita: 53
    fator (56)
        à esquerda: 57 58 59 60
        à direita: 53 54
    ativacao (57)
        à esquerda: 61
        à direita: 59
    args (58)
        à esquerda: 62 63
        à direita: 61
    arg_lista (59)
        à esquerda: 64 65
        à direita: 62 64
    id (60)
        à esquerda: 66
        à direita: 6 7 8 9 10 11 16 17 18 19 39 40 61
    num (61)
        à esquerda: 67
        à direita: 8 9 60


Estado 0

    0 $accept: . programa $end

    INT   deslocar, e ir ao estado 1
    VOID  deslocar, e ir ao estado 2

    programa          ir ao estado 3
    declaracao_lista  ir ao estado 4
    declaracao        ir ao estado 5
    var_declaracao    ir ao estado 6
    func_declaracao   ir ao estado 7


Estado 1

    6 var_declaracao: INT . id PVIR
    8               | INT . id ACOL num FCOL PVIR
   10 func_declaracao: INT . id AP params FP composto_decl

    ID  deslocar, e ir ao estado 8

    id  ir ao estado 9


Estado 2

    7 var_declaracao: VOID . id PVIR
    9               | VOID . id ACOL num FCOL PVIR
   11 func_declaracao: VOID . id AP params FP composto_decl

    ID  deslocar, e ir ao estado 8

    id  ir ao estado 10


Estado 3

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 11


Estado 4

    1 programa: declaracao_lista .
    2 declaracao_lista: declaracao_lista . declaracao

    INT   deslocar, e ir ao estado 1
    VOID  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 1 (programa)

    declaracao       ir ao estado 12
    var_declaracao   ir ao estado 6
    func_declaracao  ir ao estado 7


Estado 5

    3 declaracao_lista: declaracao .

    $padrão  reduzir usando a regra 3 (declaracao_lista)


Estado 6

    4 declaracao: var_declaracao .

    $padrão  reduzir usando a regra 4 (declaracao)


Estado 7

    5 declaracao: func_declaracao .

    $padrão  reduzir usando a regra 5 (declaracao)


Estado 8

   66 id: ID .

    $padrão  reduzir usando a regra 66 (id)


Estado 9

    6 var_declaracao: INT id . PVIR
    8               | INT id . ACOL num FCOL PVIR
   10 func_declaracao: INT id . AP params FP composto_decl

    PVIR  deslocar, e ir ao estado 13
    AP    deslocar, e ir ao estado 14
    ACOL  deslocar, e ir ao estado 15


Estado 10

    7 var_declaracao: VOID id . PVIR
    9               | VOID id . ACOL num FCOL PVIR
   11 func_declaracao: VOID id . AP params FP composto_decl

    PVIR  deslocar, e ir ao estado 16
    AP    deslocar, e ir ao estado 17
    ACOL  deslocar, e ir ao estado 18


Estado 11

    0 $accept: programa $end .

    $padrão  aceitar


Estado 12

    2 declaracao_lista: declaracao_lista declaracao .

    $padrão  reduzir usando a regra 2 (declaracao_lista)


Estado 13

    6 var_declaracao: INT id PVIR .

    $padrão  reduzir usando a regra 6 (var_declaracao)


Estado 14

   10 func_declaracao: INT id AP . params FP composto_decl

    INT   deslocar, e ir ao estado 19
    VOID  deslocar, e ir ao estado 20

    params       ir ao estado 21
    param_lista  ir ao estado 22
    param        ir ao estado 23


Estado 15

    8 var_declaracao: INT id ACOL . num FCOL PVIR

    NUM  deslocar, e ir ao estado 24

    num  ir ao estado 25


Estado 16

    7 var_declaracao: VOID id PVIR .

    $padrão  reduzir usando a regra 7 (var_declaracao)


Estado 17

   11 func_declaracao: VOID id AP . params FP composto_decl

    INT   deslocar, e ir ao estado 19
    VOID  deslocar, e ir ao estado 20

    params       ir ao estado 26
    param_lista  ir ao estado 22
    param        ir ao estado 23


Estado 18

    9 var_declaracao: VOID id ACOL . num FCOL PVIR

    NUM  deslocar, e ir ao estado 24

    num  ir ao estado 27


Estado 19

   16 param: INT . id
   18      | INT . id ACOL FCOL

    ID  deslocar, e ir ao estado 8

    id  ir ao estado 28


Estado 20

   13 params: VOID .
   17 param: VOID . id
   19      | VOID . id ACOL FCOL

    ID  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 13 (params)

    id  ir ao estado 29


Estado 21

   10 func_declaracao: INT id AP params . FP composto_decl

    FP  deslocar, e ir ao estado 30


Estado 22

   12 params: param_lista .
   14 param_lista: param_lista . VIR param

    VIR  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 12 (params)


Estado 23

   15 param_lista: param .

    $padrão  reduzir usando a regra 15 (param_lista)


Estado 24

   67 num: NUM .

    $padrão  reduzir usando a regra 67 (num)


Estado 25

    8 var_declaracao: INT id ACOL num . FCOL PVIR

    FCOL  deslocar, e ir ao estado 32


Estado 26

   11 func_declaracao: VOID id AP params . FP composto_decl

    FP  deslocar, e ir ao estado 33


Estado 27

    9 var_declaracao: VOID id ACOL num . FCOL PVIR

    FCOL  deslocar, e ir ao estado 34


Estado 28

   16 param: INT id .
   18      | INT id . ACOL FCOL

    ACOL  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 16 (param)


Estado 29

   17 param: VOID id .
   19      | VOID id . ACOL FCOL

    ACOL  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 17 (param)


Estado 30

   10 func_declaracao: INT id AP params FP . composto_decl

    ACHA  deslocar, e ir ao estado 37

    composto_decl  ir ao estado 38


Estado 31

   14 param_lista: param_lista VIR . param

    INT   deslocar, e ir ao estado 19
    VOID  deslocar, e ir ao estado 39

    param  ir ao estado 40


Estado 32

    8 var_declaracao: INT id ACOL num FCOL . PVIR

    PVIR  deslocar, e ir ao estado 41


Estado 33

   11 func_declaracao: VOID id AP params FP . composto_decl

    ACHA  deslocar, e ir ao estado 37

    composto_decl  ir ao estado 42


Estado 34

    9 var_declaracao: VOID id ACOL num FCOL . PVIR

    PVIR  deslocar, e ir ao estado 43


Estado 35

   18 param: INT id ACOL . FCOL

    FCOL  deslocar, e ir ao estado 44


Estado 36

   19 param: VOID id ACOL . FCOL

    FCOL  deslocar, e ir ao estado 45


Estado 37

   20 composto_decl: ACHA . local_declaracoes statement_lista FCHA

    $padrão  reduzir usando a regra 22 (local_declaracoes)

    local_declaracoes  ir ao estado 46


Estado 38

   10 func_declaracao: INT id AP params FP composto_decl .

    $padrão  reduzir usando a regra 10 (func_declaracao)


Estado 39

   17 param: VOID . id
   19      | VOID . id ACOL FCOL

    ID  deslocar, e ir ao estado 8

    id  ir ao estado 29


Estado 40

   14 param_lista: param_lista VIR param .

    $padrão  reduzir usando a regra 14 (param_lista)


Estado 41

    8 var_declaracao: INT id ACOL num FCOL PVIR .

    $padrão  reduzir usando a regra 8 (var_declaracao)


Estado 42

   11 func_declaracao: VOID id AP params FP composto_decl .

    $padrão  reduzir usando a regra 11 (func_declaracao)


Estado 43

    9 var_declaracao: VOID id ACOL num FCOL PVIR .

    $padrão  reduzir usando a regra 9 (var_declaracao)


Estado 44

   18 param: INT id ACOL FCOL .

    $padrão  reduzir usando a regra 18 (param)


Estado 45

   19 param: VOID id ACOL FCOL .

    $padrão  reduzir usando a regra 19 (param)


Estado 46

   20 composto_decl: ACHA local_declaracoes . statement_lista FCHA
   21 local_declaracoes: local_declaracoes . var_declaracao

    INT   deslocar, e ir ao estado 47
    VOID  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 24 (statement_lista)

    var_declaracao   ir ao estado 49
    statement_lista  ir ao estado 50


Estado 47

    6 var_declaracao: INT . id PVIR
    8               | INT . id ACOL num FCOL PVIR

    ID  deslocar, e ir ao estado 8

    id  ir ao estado 51


Estado 48

    7 var_declaracao: VOID . id PVIR
    9               | VOID . id ACOL num FCOL PVIR

    ID  deslocar, e ir ao estado 8

    id  ir ao estado 52


Estado 49

   21 local_declaracoes: local_declaracoes var_declaracao .

    $padrão  reduzir usando a regra 21 (local_declaracoes)


Estado 50

   20 composto_decl: ACHA local_declaracoes statement_lista . FCHA
   23 statement_lista: statement_lista . statement

    ID      deslocar, e ir ao estado 8
    NUM     deslocar, e ir ao estado 24
    IF      deslocar, e ir ao estado 53
    RETURN  deslocar, e ir ao estado 54
    WHILE   deslocar, e ir ao estado 55
    PVIR    deslocar, e ir ao estado 56
    AP      deslocar, e ir ao estado 57
    ACHA    deslocar, e ir ao estado 37
    FCHA    deslocar, e ir ao estado 58

    composto_decl      ir ao estado 59
    statement          ir ao estado 60
    expressao_decl     ir ao estado 61
    selecao_decl       ir ao estado 62
    iteracao_decl      ir ao estado 63
    retorno_decl       ir ao estado 64
    expressao          ir ao estado 65
    var                ir ao estado 66
    simples_expressao  ir ao estado 67
    soma_expressao     ir ao estado 68
    termo              ir ao estado 69
    fator              ir ao estado 70
    ativacao           ir ao estado 71
    id                 ir ao estado 72
    num                ir ao estado 73


Estado 51

    6 var_declaracao: INT id . PVIR
    8               | INT id . ACOL num FCOL PVIR

    PVIR  deslocar, e ir ao estado 13
    ACOL  deslocar, e ir ao estado 15


Estado 52

    7 var_declaracao: VOID id . PVIR
    9               | VOID id . ACOL num FCOL PVIR

    PVIR  deslocar, e ir ao estado 16
    ACOL  deslocar, e ir ao estado 18


Estado 53

   32 selecao_decl: IF . AP expressao FP statement
   33             | IF . AP expressao FP statement ELSE statement

    AP  deslocar, e ir ao estado 74


Estado 54

   35 retorno_decl: RETURN . PVIR
   36             | RETURN . expressao PVIR

    ID    deslocar, e ir ao estado 8
    NUM   deslocar, e ir ao estado 24
    PVIR  deslocar, e ir ao estado 75
    AP    deslocar, e ir ao estado 57

    expressao          ir ao estado 76
    var                ir ao estado 66
    simples_expressao  ir ao estado 67
    soma_expressao     ir ao estado 68
    termo              ir ao estado 69
    fator              ir ao estado 70
    ativacao           ir ao estado 71
    id                 ir ao estado 72
    num                ir ao estado 73


Estado 55

   34 iteracao_decl: WHILE . AP expressao FP statement

    AP  deslocar, e ir ao estado 77


Estado 56

   31 expressao_decl: PVIR .

    $padrão  reduzir usando a regra 31 (expressao_decl)


Estado 57

   57 fator: AP . expressao FP

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    expressao          ir ao estado 78
    var                ir ao estado 66
    simples_expressao  ir ao estado 67
    soma_expressao     ir ao estado 68
    termo              ir ao estado 69
    fator              ir ao estado 70
    ativacao           ir ao estado 71
    id                 ir ao estado 72
    num                ir ao estado 73


Estado 58

   20 composto_decl: ACHA local_declaracoes statement_lista FCHA .

    $padrão  reduzir usando a regra 20 (composto_decl)


Estado 59

   26 statement: composto_decl .

    $padrão  reduzir usando a regra 26 (statement)


Estado 60

   23 statement_lista: statement_lista statement .

    $padrão  reduzir usando a regra 23 (statement_lista)


Estado 61

   25 statement: expressao_decl .

    $padrão  reduzir usando a regra 25 (statement)


Estado 62

   27 statement: selecao_decl .

    $padrão  reduzir usando a regra 27 (statement)


Estado 63

   28 statement: iteracao_decl .

    $padrão  reduzir usando a regra 28 (statement)


Estado 64

   29 statement: retorno_decl .

    $padrão  reduzir usando a regra 29 (statement)


Estado 65

   30 expressao_decl: expressao . PVIR

    PVIR  deslocar, e ir ao estado 79


Estado 66

   37 expressao: var . ATRIB expressao
   58 fator: var .

    ATRIB  deslocar, e ir ao estado 80

    $padrão  reduzir usando a regra 58 (fator)


Estado 67

   38 expressao: simples_expressao .

    $padrão  reduzir usando a regra 38 (expressao)


Estado 68

   41 simples_expressao: soma_expressao . relacional soma_expressao
   42                  | soma_expressao .
   49 soma_expressao: soma_expressao . soma termo

    IGUAL  deslocar, e ir ao estado 81
    DIF    deslocar, e ir ao estado 82
    MEN    deslocar, e ir ao estado 83
    MENE   deslocar, e ir ao estado 84
    MAI    deslocar, e ir ao estado 85
    MAIE   deslocar, e ir ao estado 86
    SOM    deslocar, e ir ao estado 87
    SUB    deslocar, e ir ao estado 88

    $padrão  reduzir usando a regra 42 (simples_expressao)

    relacional  ir ao estado 89
    soma        ir ao estado 90


Estado 69

   50 soma_expressao: termo .
   53 termo: termo . mult fator

    MUL  deslocar, e ir ao estado 91
    DIV  deslocar, e ir ao estado 92

    $padrão  reduzir usando a regra 50 (soma_expressao)

    mult  ir ao estado 93


Estado 70

   54 termo: fator .

    $padrão  reduzir usando a regra 54 (termo)


Estado 71

   59 fator: ativacao .

    $padrão  reduzir usando a regra 59 (fator)


Estado 72

   39 var: id .
   40    | id . ACOL expressao FCOL
   61 ativacao: id . AP args FP

    AP    deslocar, e ir ao estado 94
    ACOL  deslocar, e ir ao estado 95

    $padrão  reduzir usando a regra 39 (var)


Estado 73

   60 fator: num .

    $padrão  reduzir usando a regra 60 (fator)


Estado 74

   32 selecao_decl: IF AP . expressao FP statement
   33             | IF AP . expressao FP statement ELSE statement

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    expressao          ir ao estado 96
    var                ir ao estado 66
    simples_expressao  ir ao estado 67
    soma_expressao     ir ao estado 68
    termo              ir ao estado 69
    fator              ir ao estado 70
    ativacao           ir ao estado 71
    id                 ir ao estado 72
    num                ir ao estado 73


Estado 75

   35 retorno_decl: RETURN PVIR .

    $padrão  reduzir usando a regra 35 (retorno_decl)


Estado 76

   36 retorno_decl: RETURN expressao . PVIR

    PVIR  deslocar, e ir ao estado 97


Estado 77

   34 iteracao_decl: WHILE AP . expressao FP statement

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    expressao          ir ao estado 98
    var                ir ao estado 66
    simples_expressao  ir ao estado 67
    soma_expressao     ir ao estado 68
    termo              ir ao estado 69
    fator              ir ao estado 70
    ativacao           ir ao estado 71
    id                 ir ao estado 72
    num                ir ao estado 73


Estado 78

   57 fator: AP expressao . FP

    FP  deslocar, e ir ao estado 99


Estado 79

   30 expressao_decl: expressao PVIR .

    $padrão  reduzir usando a regra 30 (expressao_decl)


Estado 80

   37 expressao: var ATRIB . expressao

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    expressao          ir ao estado 100
    var                ir ao estado 66
    simples_expressao  ir ao estado 67
    soma_expressao     ir ao estado 68
    termo              ir ao estado 69
    fator              ir ao estado 70
    ativacao           ir ao estado 71
    id                 ir ao estado 72
    num                ir ao estado 73


Estado 81

   47 relacional: IGUAL .

    $padrão  reduzir usando a regra 47 (relacional)


Estado 82

   48 relacional: DIF .

    $padrão  reduzir usando a regra 48 (relacional)


Estado 83

   44 relacional: MEN .

    $padrão  reduzir usando a regra 44 (relacional)


Estado 84

   43 relacional: MENE .

    $padrão  reduzir usando a regra 43 (relacional)


Estado 85

   45 relacional: MAI .

    $padrão  reduzir usando a regra 45 (relacional)


Estado 86

   46 relacional: MAIE .

    $padrão  reduzir usando a regra 46 (relacional)


Estado 87

   51 soma: SOM .

    $padrão  reduzir usando a regra 51 (soma)


Estado 88

   52 soma: SUB .

    $padrão  reduzir usando a regra 52 (soma)


Estado 89

   41 simples_expressao: soma_expressao relacional . soma_expressao

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    var             ir ao estado 101
    soma_expressao  ir ao estado 102
    termo           ir ao estado 69
    fator           ir ao estado 70
    ativacao        ir ao estado 71
    id              ir ao estado 72
    num             ir ao estado 73


Estado 90

   49 soma_expressao: soma_expressao soma . termo

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    var       ir ao estado 101
    termo     ir ao estado 103
    fator     ir ao estado 70
    ativacao  ir ao estado 71
    id        ir ao estado 72
    num       ir ao estado 73


Estado 91

   55 mult: MUL .

    $padrão  reduzir usando a regra 55 (mult)


Estado 92

   56 mult: DIV .

    $padrão  reduzir usando a regra 56 (mult)


Estado 93

   53 termo: termo mult . fator

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    var       ir ao estado 101
    fator     ir ao estado 104
    ativacao  ir ao estado 71
    id        ir ao estado 72
    num       ir ao estado 73


Estado 94

   61 ativacao: id AP . args FP

    ID   deslocar, e ir ao estado 8
    NUM  deslocar, e ir ao estado 24
    AP   deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 63 (args)
